universal containers/src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Pay__c</fullName>
        <label>Pay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vpay__c</fullName>
        <label>Vpay</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>level__c</fullName>
        <label>level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Employeevc</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employeevc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employeevc</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>